--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,47 +8,125 @@
     <style>
         :root {
             --bg: #ffffff;
-            --fg: #1a1a1a;
-            --muted: #666666;
-            --accent: #007bff;
+            --fg: #0f172a;
+            --muted: #64748b;
+            --accent: #3b82f6;
+            --border: #e2e8f0;
         }
+
         @media (prefers-color-scheme: dark) {
             :root {
-                --bg: #0d1117;
-                --fg: #c9d1d9;
-                --muted: #8b949e;
-                --accent: #58a6ff;
+                --bg: #020617;
+                --fg: #f8fafc;
+                --muted: #94a3b8;
+                --accent: #60a5fa;
+                --border: #1e293b;
             }
         }
+
         body {
-            font-family: system-ui, -apple-system, sans-serif;
+            font-family: 'Inter', system-ui, -apple-system, sans-serif;
             background-color: var(--bg);
             color: var(--fg);
-            display: grid;
-            place-content: center;
+            display: flex;
+            justify-content: center;
+            align-items: center;
             height: 100vh;
             margin: 0;
-            text-align: center;
+            -webkit-font-smoothing: antialiased;
         }
-        h1 { font-size: 5rem; margin: 0; font-weight: 800; }
-        p { color: var(--muted); font-size: 1.25rem; margin: 0.5rem 0 2rem; }
-        a {
+
+        .container {
+            display: flex;
+            align-items: center;
+            gap: 2rem;
+            animation: fadeIn 0.5s cubic-bezier(0.16, 1, 0.3, 1);
+        }
+
+        .icon-wrapper {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: var(--accent);
+            opacity: 0.9;
+        }
+
+        .divider {
+            width: 1px;
+            height: 48px;
+            background-color: var(--border);
+        }
+
+        .content {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+        }
+
+        h1 {
+            font-size: 1.5rem;
+            margin: 0;
+            font-weight: 600;
+            letter-spacing: -0.02em;
+            line-height: 1;
+        }
+
+        p {
+            color: var(--muted);
+            font-size: 0.875rem;
+            margin: 0.25rem 0 0;
+            font-weight: 400;
+        }
+
+        .back-link {
+            margin-top: 1rem;
             color: var(--accent);
             text-decoration: none;
-            font-weight: 600;
-            border: 1px solid var(--accent);
-            padding: 0.5rem 1rem;
-            border-radius: 6px;
+            font-size: 0.875rem;
+            font-weight: 500;
+            display: inline-flex;
+            align-items: center;
+            gap: 0.375rem;
             transition: opacity 0.2s;
+            width: max-content;
         }
-        a:hover { opacity: 0.8; }
+
+        .back-link:hover {
+            opacity: 0.7;
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: scale(0.96);
+            }
+
+            to {
+                opacity: 1;
+                transform: scale(1);
+            }
+        }
     </style>
 </head>
+
 <body>
-    <div>
-        <h1>404</h1>
-        <p>Not Found</p>
-        <a href="/">Back Home</a>
+    <div class="container">
+        <div class="icon-wrapper">
+            <svg width="40" height="40" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M60 5 L30 55 H48 L40 95 L70 45 H52 L60 5 Z" fill="currentColor" />
+            </svg>
+        </div>
+
+        <div class="divider"></div>
+
+        <div class="content">
+            <h1>404</h1>
+            <p>Page could not be found.</p>
+            <a href="javascript:history.back()" class="back-link">
+                <span>&larr;</span> Go back
+            </a>
+        </div>
     </div>
 </body>
+
 </html>
